Fix z-index, change cinema mode and player position

--- a/src/app/ngtube.component.css
+++ b/src/app/ngtube.component.css
@@ -1,5 +1,5 @@
 .section {
-    padding-left: 160px;
+    padding-left: 200px;
     padding-bottom: 150px;
 }
 
@@ -9,7 +9,7 @@
 }
 
 header, footer {
-    padding-left: 240px;
+    padding-left: 280px;
 }
 
 footer {
