--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -29,6 +29,7 @@
 }
 
 .side-nav {
+    width: 280px;
     background-color: #323538;
 }
 
